public/style.css
* {
  margin:0;
  padding: 0;
  font-family: Arial, Helvetica, sans-serif;
}
body{
  display: flex;
  flex-direction: column;
}
main{
  margin: 10px 0px;
  padding: 0;
}
section{
  margin: 10px;
  padding: 5px;
}
article{
  margin: 5px 15px;
  padding: 5px 10px;
  }
h1 {
  text-align: center;
}
  
p{
  font-size: 16px;
  margin: 10px auto;
  }

.rounded-borders{
  border: solid whitesmoke 2px;
  border-radius: 10px;
}
.circle{
  border: solid;
  border-radius: 50%;
}
.small-text{
  font-size: small;
}
.header-main{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: #363636;
  padding: 0px 25px 0px 25px;
}
.header-text-box{
  width: 250px;
  margin: 5px 5px;
}
.header-text{
  width: 100%;
  color: whitesmoke;
  font-family: var(--font-header, sans-serif); 
}
.header-icon-flexbox{
  display: flex;
  flex-direction: row; 
  justify-content: space-between;
}
.icon-link-img{
  color: black;
  background: whitesmoke;
  width: 30px;
  margin: 5px 20px;
  padding: 5px;
  border: solid whitesmoke 1px;
  border-radius: 10%;
}
.nav-bar{
  display: flex;
  flex-direction: row;
  flex: 1 0 auto;
  justify-content: space-evenly;
}
.header-button{
  background: none;
  border: none;
  font-size: larger;
  max-width: 150px;
  height: 40px;
  color: whitesmoke;
  margin: auto 10px;
}
.body-main-container{
  display: flex;
  flex: 1 0 auto;
  flex-direction: row;
}
.body-header-text{
  margin: 10px 5px;
  padding: 10px 5px;
}
.body-section-1{
  
}
.body-section-2{
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}
.profile-img-box{
  max-width: 100%;
}
.profile-img{
  max-width: 100%;
  border-radius: 5%;
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}
.body-content-title{
  margin: 10px auto 5px auto;
  padding: 2px;
  font: bold;
}
.body-content-text{
  margin: 5px;
  padding: 10px;
  text-align: left;
}
.footer-main {
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  /* background: linear-gradient(to bottom,white,lightgray, darkgray); */
  background: #363636;
  align-items: center;
  color: white;
}
.footer-main a{
  color: white;
}

.footer-text{
  font-size: 12px;
  margin: 5px auto;
}
.projects-container{
  flex: 1 0 auto;
  background: white;
}
.page-title{
  margin: 20px auto;
  text-align: center;
}
.project-group-container{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.project-group{
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  border: solid black 1px;
  margin: 20px;
  padding: 10px;
  max-width: 800px;
}

.project-img{
  max-width: 100%;
}
.contact-container{
  display: flex;
  flex: 1 0 auto;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}
.contact-content{
  margin: 25px 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.contact-form{
 font-size: 20px;
 padding: 20px 30px;
 border-left: solid black 1px;
 border-right: solid black 1px;
 border-radius: 10%;
 width: 80%;
 align-content: center;
}

.contact-message{
  width: 100%;
}

#name, #email, #phone, #message{
  width: 100%;
}

.form-button-group{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.standard-button{
  margin: 5px 10px;
  width: 125%;
  height: 30px;
}
@media only screen and (max-width: 360px) {
  .contact-form{
    padding: 15px 10px;
  }
}
@media only screen and (max-width: 280px) {
  .contact-form{
    padding: 15px 10px;
    width: 80%;
  }
}

 @media (min-width: 600px){
   .header-main{
     align-items: center;
   }
  }
  @media only screen and (max-width: 720px) {
    .header-main{
      flex-direction: column;
      align-items: center;
    }
    .header-icon-flexbox{
      justify-content: flex-start;
    }
    .header-btn-flexbox{
      justify-content: flex-start;
    }
    .body-main-container{
      flex-direction: column;
      align-items: center;
    }
    .body-section-1{
      width: 65%;
    }
    .body-section-2{
      width: 90%;
    }
}

